Fix skin issues by adding overflow
Also cut down on the crazy long classnames.

--- a/css/emoji-mart.css
+++ b/css/emoji-mart.css
@@ -223,12 +223,13 @@
   background-color: #fff;
 }
 
-.emoji-mart-skin-swatches-opened .emoji-mart-skin-swatch {
+
+.emoji-mart-skin-swatches.opened .emoji-mart-skin-swatch {
   width: 16px;
   padding: 0 2px;
 }
 
-.emoji-mart-skin-swatches-opened .emoji-mart-skin-swatch-selected:after {
+.emoji-mart-skin-swatches.opened .emoji-mart-skin-swatch-selected:after {
   opacity: .75;
 }
 
@@ -248,12 +249,13 @@
 .emoji-mart-skin-swatch:nth-child(5) { transition-delay: .12s }
 .emoji-mart-skin-swatch:nth-child(6) { transition-delay: .15s }
 
-.emoji-mart-skin-swatch-selected {
+.emoji-mart-skin-swatch.selected {
   position: relative;
   width: 16px;
   padding: 0 2px;
 }
-.emoji-mart-skin-swatch-selected:after {
+
+.emoji-mart-skin-swatch.selected:after {
   content: "";
   position: absolute;
   top: 50%; left: 50%;
@@ -266,60 +268,48 @@
   transition: opacity .2s ease-out;
 }
 
-.emoji-mart-skin-swatch-custom {
+.emoji-mart-skin-swatch.custom {
   display: inline-block;
   width: 0;
+  height: 0;
+  overflow: hidden;
   vertical-align: middle;
-  transition-property: width, padding;
+  transition-property: width, height;
   transition-duration: .125s;
   transition-timing-function: ease-out;
+  cursor: default;
 }
 
-.emoji-mart-skin-swatch-custom:nth-child(1) { transition-delay: 0s }
-.emoji-mart-skin-swatch-custom:nth-child(2) { transition-delay: .03s }
-.emoji-mart-skin-swatch-custom:nth-child(3) { transition-delay: .06s }
-.emoji-mart-skin-swatch-custom:nth-child(4) { transition-delay: .09s }
-.emoji-mart-skin-swatch-custom:nth-child(5) { transition-delay: .12s }
-.emoji-mart-skin-swatch-custom:nth-child(6) { transition-delay: .15s }
+.emoji-mart-skin-swatch.custom:nth-child(1) { transition-delay: 0s }
+.emoji-mart-skin-swatch.custom:nth-child(2) { transition-delay: .03s }
+.emoji-mart-skin-swatch.custom:nth-child(3) { transition-delay: .06s }
+.emoji-mart-skin-swatch.custom:nth-child(4) { transition-delay: .09s }
+.emoji-mart-skin-swatch.custom:nth-child(5) { transition-delay: .12s }
+.emoji-mart-skin-swatch.custom:nth-child(6) { transition-delay: .15s }
 
-.emoji-mart-skin-swatch-custom-selected {
+.emoji-mart-skin-swatch.custom.selected {
   position: relative;
   width: 50px;
-  padding: 0 2px;
+  height: 50px;
 }
-.emoji-mart-skin-swatch-custom-selected:after {
+
+.emoji-mart-skin-swatch.custom.selected:after {
   content: "";
-  position: absolute;
-  top: 50%; left: 50%;
-  width: 4px; height: 4px;
-  margin: -2px 0 0 -2px;
-  background-color: #fff;
-  border-radius: 100%;
-  pointer-events: none;
-  opacity: 0;
-  transition: opacity .2s ease-out;
 }
 
-.emoji-mart-skin-swatches-custom {
-  font-size: 0;
-  padding: 2px 0;
-  border: 1px solid #d9d9d9;
-  border-radius: 12px;
-  background-color: #fff;
-}
-
-.emoji-mart-skin-swatches-custom-opened .emoji-mart-skin-swatch-custom {
+.emoji-mart-skin-swatches.custom.opened .emoji-mart-skin-swatch.custom {
   width: 50px;
-  padding: 0 2px;
+  height: 50px;
 }
 
-.emoji-mart-skin-swatches-custom-opened .emoji-mart-skin-swatch-custom-selected:after {
+.emoji-mart-skin-swatches.custom.opened .emoji-mart-skin-swatch-custom.selected:after {
   opacity: .75;
 }
 
 .emoji-mart-skin {
   display: inline-block;
-  width: 100%; padding-top: 100%;
+  width: 100%;
+  padding-top: 100%;
   max-width: 12px;
   border-radius: 100%;
 }
